--- a/config/settings.json
+++ b/config/settings.json
@@ -19,7 +19,7 @@
     "customCss": "",
     "currencySymbol": "£",
     "paymentGateway": "stripe",
-    "databaseConnectionString": "mongodb://127.0.0.1:27017/expresscart",
+    "databaseConnectionString": "mongodb://root:Jwl12345!!@ds131099.mlab.com:31099/airmaid",
     "theme": "Cloth",
     "trackStock": false,
     "orderHook": "",
